fixed the video size/layout issues with a css hack. this resolves #18

--- a/css/style.css
+++ b/css/style.css
@@ -288,6 +288,11 @@ text.annotation-label{
 	cursor: pointer; cursor: hand;
 }
 
+video {
+  width: 100%    !important;
+  height: auto   !important;
+}
+
 /*======================================================================
 	Selectric
 ======================================================================*/
